main-menu (0.073) UNRELEASED; urgency=low

  * Bastian Blank
    - Check for availability of debian-installer/language.
  * Christian Perrier
    - Rename templates file to main-menu.templates

 -- Christian Perrier <bubulle@debian.org>  Wed, 18 Aug 2004 10:01:17 +0200

main-menu (0.072) unstable; urgency=low

  * Joey Hess
    - Remove some dead code Bruce Perens noticed.
  * Colin Watson
    - Avoid empty entries in generated menu choices list; main-menu wrongly
      assumed that the last package in the list is always installable.
  * Updated translations:
    - Arabic (ar.po) by Abdulaziz Al-Arfaj
    - Croatian (hr.po) by Kruno
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll

 -- Colin Watson <cjwatson@debian.org>  Sat, 24 Jul 2004 03:27:54 +0100

main-menu (0.071) unstable; urgency=low

  * Bastian Blank
    - Use X_SAVE.
    - Fix backup.

 -- Bastian Blank <waldi@debian.org>  Sat, 10 Jul 2004 22:26:58 +0200

main-menu (0.070) unstable; urgency=low

  * Bastian Blank
    - Cleanup.
    - Exit cleanly if asked to do so. Needs cdebconf 0.68.
  * Updated translations: 
    - Welsh (cy.po) by Dafydd Harries
    - Basque (eu.po) by Piarres Beobide Egaña
    - fa (fa.po) by Arash Bijanzadeh
    - Finnish (fi.po) by Tapio Lehtonen

 -- Bastian Blank <waldi@debian.org>  Sat, 10 Jul 2004 22:02:28 +0200

main-menu (0.067) unstable; urgency=low

  * Matt Kraai
    - Do not skip a package unless all of the virtual packages that it
      provides are provided by installed packages (closes: #247929).
  * Updated translations:
    - Spanish (Castilian) (es.po) by Javier Fernandez-Sanguino Peña
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Vietnamese (vi.po) by Vũ Quang Trung
  * Christian Perrier
    - add myself to Uploaders

 -- Christian Perrier <bubulle@debian.org>  Sat, 22 May 2004 08:46:36 +0200

main-menu (0.066) unstable; urgency=low

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bokmal, Norwegian (nb.po) by Bjørn Steensrud